Fixed an overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body{
     background: #eee;
     margin: 0;
     min-width: 960px;
+    width: 100%;
 }
 
 .topbar{
@@ -84,7 +85,7 @@ p{
 
 .greenbottom{
     background: #2b9687;
-    padding: 5px;
+    padding: 5px 0px 5px 0px;
     position: absolute;
     top: 0;
     min-width: 960px;
